--- a/src/app/auth/containers/login2/login2.component.html
+++ b/src/app/auth/containers/login2/login2.component.html
@@ -41,7 +41,7 @@
                                 <!-- Botones adicionales -->
                                 <div class="mt-3 text-center">
                                     <button class="btn btn-outline-dark w-100" (click)="loginWithGoogle()">
-                                        <img src="assets/google-icon.svg" alt="Google" width="20" class="me-2">
+                                        <img src="assets/img/google-logo.png" alt="Google" width="20" class="me-2">
                                         Ingresar con Google
                                     </button>
                                     <p class="mt-3">¿No tienes cuenta?
