--- a/src/app/auth/containers/login2/login2.component.html
+++ b/src/app/auth/containers/login2/login2.component.html
@@ -40,15 +40,13 @@
 
                                 <!-- Botones adicionales -->
                                 <div class="mt-3 text-center">
-                                    <button class="btn btn-outline-dark w-100" (click)="loginWithGoogle()">
-                                        <img src="assets/img/google-logo.png" alt="Google" width="20" class="me-2">
-                                        Ingresar con Google
-                                    </button>
+                                    <div id="google-button"></div>
+                                    <!-- Aquí se renderiza el botón de Google -->
+
                                     <p class="mt-3">¿No tienes cuenta?
                                         <a routerLink="/register" class="text-primary">Regístrate aquí</a>
                                     </p>
                                 </div>
-
                             </div>
                         </div>
                     </div>
