:sparkles: feat: Nueva pagina de Registro

--- a/src/app/auth/containers/register/register.component.css
+++ b/src/app/auth/containers/register/register.component.css
@@ -1,4 +1,22 @@
-.login{
-  background-color: #95e9e8;
-  height: 100vh;
+.register-container {
+  width: 400px;
+  margin: auto;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+mat-form-field {
+  width: 100%;
+}
+
+.snackbar-success {
+  background-color: #4caf50;
+  color: white;
+}
+
+.snackbar-error {
+  background-color: #f44336;
+  color: white;
 }
