--- a/src/app/auth/containers/login2/login2.component.html
+++ b/src/app/auth/containers/login2/login2.component.html
@@ -43,7 +43,8 @@
                                     <div id="google-button"></div>
                                     <!-- Aquí se renderiza el botón de Google -->
 
-                                    <p class="mt-3">¿No tienes cuenta?
+                                    <p class="mt-3">
+                                        ¿No tienes cuenta?
                                         <a routerLink="/register" class="text-primary">Regístrate aquí</a>
                                     </p>
                                 </div>
